--- a/CSS/aono.css
+++ b/CSS/aono.css
@@ -4,13 +4,13 @@ body{
     font-family: serif;
 }
 
-#HEADER{
+.HEADER{
     display: flex;
+    justify-content: center;
 }
 
-#HEADER img{
+.HEADER img{
     width: 80px;
-    margin-left: 250px;
 }
 
 .hea-list{
@@ -29,10 +29,22 @@ a{
     color: black;
 }
 
-.bg_test{
+#HEAD{
     text-align: center;
-    padding: 150px;
-    background-image: url(/img/MV/main.png);
+    background-image: url(../img/MV/main.png);
+    background-size: cover;
+    background-position: center;
+    height: 550px;
+}
+
+.bg_test{
+    position: relative;
+}
+
+.bg_text{
+    position: absolute;
+    top: 150px;
+    left: 620px;
 }
 
 .title{
@@ -105,6 +117,8 @@ a{
     border-style: solid;
     border-width: thin;
     margin-top: 50px;
+    width: 500px;
+    margin: 50px auto
 }
 
 .link{
